--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.carlosgti001.rnegen"
-        minSdk 16
-        targetSdk 32
-        versionCode 10
-        versionName '2.0.1'
+        minSdk 21
+        targetSdk 33
+        versionCode 203
+        versionName '2.0.3'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,14 +28,12 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.carlosgti001.rnegen'
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.compose.ui:ui:1.0.0-rc01'
-    testImplementation 'junit:junit:4.+'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.compose.ui:ui:1.3.0-beta02'
 }
