--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.compose.ui:ui:1.3.0-beta02'
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.4.1'
 }
