--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RNEGEN">
+        android:theme="@style/Theme.RNEGEN.NoActionBar"
+        >
+        <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/adApp"/>
         <activity
             android:name=".formulario"
             android:exported="false"
@@ -16,13 +21,16 @@
             android:theme="@style/Theme.RNEGEN.NoActionBar" />
         <activity
             android:name=".info2"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges = "uiMode"/>
         <activity
             android:name=".info1"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges = "uiMode"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges = "uiMode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
