--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    defaultVersionName = '2.1.0'
+    defaultVersionName1 = defaultVersionName
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
