--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.carlosgti001.rnegen"
         minSdk 21
         targetSdk 33
-        versionCode 11
-        versionName '2.1.0'
+        versionCode 14
+        versionName '2.2.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,10 +34,11 @@ android {
 }
 
 dependencies {
+    implementation files("unity-ads.aar")
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.compose.ui:ui:1.3.0-beta02'
-    implementation 'com.google.android.gms:play-services-ads:21.0.0'
-    implementation 'androidx.lifecycle:lifecycle-process:2.4.1'
+    implementation 'androidx.compose.ui:ui:1.4.0-alpha02'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.5.1'
 }
